# pyfedicross

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Vagrantfile  app.template  docker-compose.yaml  example_content.json  manage.py  pyproject.toml  start.sh
accounts/: backends.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_fediverseapp_webhook_secret.py  0003_alter_user_app.py
pyfedicross/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
src/css/: custom.css
src/js/: htmx.min.js
templates/: base.html  home.html  login_form.html  post_form.html  webhook_setings.html
ui/: fediverse_login.py  forms.py  libcrosspost.py  mastodon.py  misskey.py  social_login.py  tasks.py  urls.py  views.py
