[tool.poetry]
name = "pyfedicross"
version = "0.1.0"
description = ""
authors = ["Ryan Ho <204075+ryanho@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.2.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.16"}
httpx = "^0.26.0"
django-cors-headers = "^4.3.1"
plurk-oauth = "^0.9.2"
authlib = "^1.3.0"
gunicorn = "^21.2.0"
dramatiq = {extras = ["redis", "watch"], version = "^1.16.0"}
django-dramatiq = "^0.11.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
