[project]
name = "pyfedicross"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.5.2",
    "django==5.2",
    "django-cors-headers>=4.7.0",
    "django-debug-toolbar>=5.1.0",
    "django-dramatiq>=0.13.0",
    "django-environ>=0.12.0",
    "dramatiq[redis,watch]>=1.17.1",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "plurk-oauth>=0.9.2",
]
